# furry-memory

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  diesel.toml  todo.md  toystory.json
crates/base/: Cargo.toml
crates/base/src/: lib.rs
crates/base/src/db/: database.rs  mod.rs  schema.rs
crates/base/src/db/models/: file.rs
crates/base/src/server/: mod.rs
crates/base/src/test/: functions.rs  html.rs  mod.rs  server.rs
crates/base/src/types/: id.rs
crates/file_system/: Cargo.toml
crates/file_system/src/: lib.rs  path.rs
crates/file_system/src/dir/: directory.rs
crates/file_system/src/file/: file.rs  range.rs
crates/file_system/tests/: dir.rs  file.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/files/src/refresh/: handler.rs  mod.rs  template.rs
crates/files/src/refresh/util/: meta_info.rs  path_info.rs  updater.rs
crates/files/src/stream/: handler.rs  mod.rs
crates/files/src/stream/util/: chunk.rs  range.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/main/src/config/: tera.rs
crates/main/src/controllers/: files.rs  index.rs  mod.rs  movies.rs  videos.rs
crates/main/src/controllers/refresh/: form.rs  handler.rs  mod.rs  update_service.rs
crates/main/src/controllers/refresh/util/: meta_info.rs  mod.rs  path_info.rs  updater.rs
crates/main/src/controllers/stream/: chunk.rs  handler.rs  mod.rs  range.rs
crates/main/src/controllers/stream/util/: chunk.rs  mod.rs  range.rs
crates/main/src/entities/: file.rs  mod.rs
crates/main/tests/: movies.rs  refresh.rs  stream.rs
crates/main/tests/common/: server.rs
crates/movies/: Cargo.toml
crates/test_util/: Cargo.toml
diesel/: db.sqlite
scripts/: migration_apply.sh  migration_create.sh
templates/base/: base.html.tera  list.html.tera
templates/components/: movie-list-item.html.tera  movie-list.html.tera  navbar.html.tera
templates/views/: audio-player.html.tera  audios.html.tera  files.html.tera  index.html.tera  movies.html.tera  refresh.html.tera  video-player.html.tera  videos.html.tera
(+24 files in other folders)
