[package]
name = "file_system"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["fs", "io-util"] }
mime_guess = "2.0"
regex = "1.5"
futures = "0.3"

[dev-dependencies]
test_util = { path = "../test_util" }
tokio = { version = "*", features = ["macros", "rt"] }
