[package]
name = "files"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

rocket = "0.5.0-rc"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
tokio = { version = "1.6", features = ["fs"] }
mime_guess = "2.0"
regex = "1.5"
